syntax = "proto3";
package comdex.liquidation.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/comdex-official/comdex/x/liquidation/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message MsgLiquidateVaultRequest {


    uint64 app_id = 1 [
      (gogoproto.customname) = "AppId",
      (gogoproto.moretags) = "yaml:\"id\""];
  
    uint64 vault_id = 2 [
      (gogoproto.customname) = "VaultId",
      (gogoproto.moretags) = "yaml:\"id\""];
  }
  message  MsgLiquidateVaultResponse{}

  service Msg {
    rpc MsgCreate(MsgLiquidateVaultRequest) returns (MsgLiquidateVaultResponse);
   
  }
  