syntax = "proto3";
package comdex.liquidity.v1beta1;

import "gogoproto/gogo.proto";
import "comdex/liquidity/v1beta1/liquidity.proto";

option go_package = "github.com/comdex-official/comdex/x/liquidity/types";
option (gogoproto.goproto_getters_all) = false;

// GenesisState defines the liquidity module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
